# Lean-Alpha-Backend

./: .gitignore  README.md  agent$task.txt  open_positions.json  pyproject.toml  requirements.txt  signal.json
src/loj/: api_server.py  crew.py  main.py  mcp_server.py
src/loj/config/: Untitled  agents.yaml  tasks.yaml
src/loj/tools/: market_tools.py  wallet_tools.py
