[project]
name = "loj"
version = "0.1.0"
description = "loj using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "crewai-tools>=1.7.2",
    "crewai[tools]==1.7.2",
    "fastapi>=0.136.1",
    "groq>=0.37.1",
    "hyperliquid>=0.4.66",
    "langchain>=1.3.1",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "litellm>=1.75.3",
    "mcp>=1.16.0",
    "openai>=1.83.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.47.0",
]

[project.scripts]
loj = "loj.main:run"
run_crew = "loj.main:run"
train = "loj.main:train"
replay = "loj.main:replay"
test = "loj.main:test"
run_with_trigger = "loj.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
